@@ -254,7 +254,7 @@ typedef struct {
 extern void						tagsistant_path_resolution_init();
 extern void						tagsistant_reasoner_init();
 
-extern tagsistant_querytree *	tagsistant_querytree_new(const char *path, int assign_inode, int start_transaction);
+extern tagsistant_querytree *	tagsistant_querytree_new(const char *path, int assign_inode, int start_transaction, int provide_connection);
 extern void 					tagsistant_querytree_destroy(tagsistant_querytree *qtree, guint commit_transaction);
 
 extern void						tagsistant_querytree_set_object_path(tagsistant_querytree *qtree, char *new_object_path);
